# pyproject-starter

./: .command-registry.json  .gitignore  .pre-commit-config.yaml  AI_ASSISTANT_HISTORY.md  CLAUDE.md  CLAUDE.md.backup.20250805-204115  README.md  REQUIREMENTS_MIGRATION.md  create-module-agent.py  pyproject.toml  pyproject.toml.backup  requirements-consolidated.txt  uv.toml
.agent-os/context/: project-patterns.yml  team-conventions.yml
.agent-os/product/: mission.md  tech-stack.md
.agent-os/specs/2025-07-30-agent-os-integration/sub-specs/: technical-spec.md  tests.md
.agent-os/specs/2025-07-31-agent-os-integration/: spec.md
.agent-os/specs/2025-07-31-agent-os-integration/sub-specs/: technical-spec.md
.agent-os/sub-agents/: development-agent.md
.ai/: README.md  default-prp.md  project_structure.md  settings.json
.ai/code-guidance/: AI_ASSISTANT-JAVA-GRADLE.md  AI_ASSISTANT-JAVA-MAVEN.md  AI_ASSISTANT-NEXTJS-15.md  AI_ASSISTANT-NODE.md  AI_ASSISTANT-PYTHON-BASIC.md  AI_ASSISTANT-REACT.md  ASTRO.md  PYTHON-BASIC.md
.ai/commands/: README.md
.ai/commands/PRPs/: api-contract-define.md  execute-prp.md  generate-prp.md  prp-base-create.md  prp-base-execute.md  prp-planning-create.md  prp-spec-create.md  prp-spec-execute.md  prp-task-create.md  prp-task-execute.md  task-list-init.md
.ai/commands/code-quality/: refactor-simple.md  review-general.md  review-staged-unstaged.md
.ai/commands/development/: create-pr.md  debug-RCA.md  new-dev-branch.md  onboarding.md  prime-core.md  smart-commit.md
.ai/commands/git-operations/: conflict-resolver-general.md  conflict-resolver-specific.md
.ai/commands/typescript/: TS-create-base-prp.md
.ai/prp/: default.md
.drcode/: config.json  droids.yml
.github/workflows/: test.yml
agents/: index.yaml
docs/: AI_CHAT_HISTORY.md  CLAUDE.md  GITHUB_ISSUE_UV_IMPLEMENTATION.md  data_science_architecture.md  data_science_architecture.puml  package_development.md  package_development.puml  pypi_deployment.md  pypi_deployment_demo.md  uv.md  uv_best_practices_implementation.md
docs/chat-history/: 2025-07-12_guidelines-update.md  README.md
docs/deployment/: README.md  pypi_deployment.md  pypi_deployment_demo.md
docs/diagrams/: README.md  data_science_architecture.md  data_science_architecture.puml  package_development.md  package_development.puml
docs/guidance/: README.md  ai_assistant_code_guidance.md  ai_assistant_data_science_guidance.md  data_science_guidance.md
docs/modules/: README.md
docs/prp/: prp_framework.md
docs/prp/ai_docs/: build_with_claude_code.md  cc_administration.md  cc_commands.md  cc_common_workflows.md  cc_deployment.md  cc_hooks.md  cc_mcp.md  cc_memory.md  cc_monitoring.md  cc_overview.md  cc_settings.md  cc_troubleshoot.md
docs/prp/templates/: prp_base.md  prp_base_typescript.md
docs/tooling/: README.md  using_setuppy.md  uv.md  uv_best_practices_implementation.md
docs/workflows/: README.md
examples/: README.md
examples/implementations/: README.md
examples/patterns/: README.md
scripts/: README.md  UV_MIGRATION_GUIDE.md  UV_TEST_GUIDE.md  publish.ps1  publish.sh  release.ps1  release.sh  submodule_script.sh  test-deployment.sh  uv-migrate.ps1  uv-migrate.sh  uv-test.ps1  uv-test.sh
specs/: README.md
specs/2025-07-30-agent-os-integration/: spec.md  tasks.md
specs/2025-07-31-agent-os-integration/: tasks.md
specs/2025-07-31-agent-os-integration/sub-specs/: tests.md
specs/templates/: README.md  spec_base.md
src/: AI_DEVELOPMENT_HISTORY.md
src/py-package-template/: __init__.py  __main__.py
src/py-package-template/tests/: test_calculation.py
src/py_package_template/: __init__.py
src/py_package_template/tests/: test_calculation.py
src/pyproject_starter/: __init__.py  __main__.py  calculation.py
src/pyproject_starter/tests/: __init__.py  test_calculation.py
tests/: __init__.py  conftest.py  test_calculation.py  test_main.py
